--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-hello
-this
-new
-day
+
+Vim是从 vi 发展出来的一个文本编辑器。代码补全、编译及错误跳转等方便编程的功能特别丰富，在程序员中被广泛使用，和Emacs并列成为类Unix系统用户最喜欢的文本编辑器。[3] 
+使用vim先知道其设计理念是很重要的,有助于记忆,举一反三。
+1.vim的设计理念是组合;
+命令组合:
+Vim强大的编辑能力中很大部分是来自于其普通模式命令。vim的设计理念是命令的组合。例如普通模式命令"dd"删除当前行，"dj"代表删除到下一行,原理是第一个"d"含义是删除,"j"键代表移动到下一行,组合后"dj"删除当前行和下一行。另外还可以指定命令重复次数，"2dd"（重复"dd"两次），和"dj"的效果是一样的。"d^","^"代表行首,故组合后含义是删除到光标开始到行首间的内容(不包含光标);"d$" $"代表行尾,删除到行尾的内容(包含光标);用户学习了各种各样的文本间移动/跳转的命令和其他的普通模式的编辑命令，并且能够灵活组合使用的话，能够比那些没有模式的编辑器更加高效的进行文本编辑。
+模式间的组合:
+在普通模式中，有很多方法可以进入插入模式。比较普通的方式是按"a"（append/追加）键或者"i"（insert/插入）键。
+2.很多快捷键设置和正则表达式类似,可以辅助记忆; ^ $ w 等
+3. vim针对程序员做了优化;
